--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@
 /* Header Section */
 header {
    height: 800px;
-   background: url(/assets/img/banner-bg.png);
+   background: url(./assets/img/banner-bg.png);
    background-repeat: no-repeat;
    background-size: cover;
    border: 1px solid red;
@@ -150,7 +150,7 @@ header {
 
 /* Popular Menu Section */
 #popular-menu {
-   background-image: url(/assets/img/popular-bg.png);
+   background-image: url(./assets/img/popular-bg.png);
    background-repeat: no-repeat;
    background-size: cover;
    height: 800px;
@@ -210,7 +210,7 @@ header {
 
 /* Chicken Wing Section */
 #chicken {
-   background: url(/assets/img/chicken-wing-bg-black.png);
+   background: url(./assets/img/chicken-wing-bg-black.png);
    background-repeat: no-repeat;
    background-size: cover;
    height: 800px;
@@ -288,7 +288,7 @@ header {
 
 /* Stats Section */
 #stats {
-   background: url(/assets/img/stats-bg.png);
+   background: url(./assets/img/stats-bg.png);
    background-repeat: no-repeat;
    background-size: cover;
    height: 800px;
@@ -345,7 +345,7 @@ header {
 /* Satay-Section */
 
 #satay {
-   background: url(/assets/img/chicken-satay-bg-black.png);
+   background: url(./assets/img/chicken-satay-bg-black.png);
    background-repeat: no-repeat;
    background-size: cover;
    height: 800px;
@@ -419,7 +419,7 @@ header {
 
 /* Chef Section */
 #chef {
-   background: url(/assets/img/chef-bg.png);
+   background: url(./assets/img/chef-bg.png);
    background-repeat: no-repeat;
    background-size: cover;
    height: 800px;
@@ -460,7 +460,7 @@ header {
 /* Update Section */
 #update {
    height: 800px;
-   background-image: url(/assets/img/update-bg.png);
+   background-image: url(./assets/img/update-bg.png);
    background-repeat: no-repeat;
    background-size: cover;
    border: 2px solid rgb(25, 0, 255);
