--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -288,7 +288,7 @@ header {
 
 /* Stats Section */
 #stats {
-   background: url(../img/stats-bg.png);
+   background: url(../img/statsbackground.png);
    background-repeat: no-repeat;
    background-size: cover;
    height: 800px;
